Fix blockquote on mobile should have more margin-left

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -220,7 +220,7 @@ i.china-red-light.icon {
 
 blockquote {
   box-sizing: border-box;
-  margin: 1.75em 0 1.75em -2.2em;
+  margin: 1.75em 0 1.75em -1.2em;
   padding: 0 0 0 1.75em;
 
   border-left: #4A4A4A 0.4em solid;
